# gpcpp

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md  _config.yml  index.md
.github/workflows/: documentation.yml
example2/: dataplot.h  example.cpp
examples/: example.cpp  example_3d_surface_plot.cpp  example_contour_plot.cpp  example_custom_grid.cpp  example_custom_line_style_color.cpp  example_custom_line_type_color.cpp  example_labels.cpp  example_line_plot.cpp  example_line_plot_with_error_bars.cpp  example_logarithmic_scaling.cpp  example_multiple_plots_one_window.cpp  example_multiple_styles.cpp  example_save_plot_to_file.cpp  example_scatter_plot.cpp
include/gnuplotcpp/: gnuplot.hpp  gnuplot.i.hpp
include/gpcpp/: box_style.hpp  color.hpp  defines.hpp  gnuplot.hpp  gnuplot.i.hpp  id_manager.hpp
